--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,22 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="ProThemeOrange" parent="@android:style/Theme.Dialog">
+        <item name="android:alertDialogStyle">@style/CustomAlertDialogStyle</item>
+        <item name="android:background">@color/colorAccent</item>
+        <item name="android:textColorPrimary">#e6e6e6</item>
+    </style>
+    <style name="CustomAlertDialogStyle">
+
+        <item name="android:bottomDark">@color/colorAccent</item>
+        <item name="android:bottomMedium">@color/colorAccent</item>
+        <item name="android:centerBright">@color/colorAccent</item>
+        <item name="android:centerDark">@color/colorAccent</item>
+        <item name="android:centerMedium">@color/colorAccent</item>
+        <item name="android:fullBright">@color/colorAccent</item>
+        <item name="android:fullDark">@color/colorAccent</item>
+        <item name="android:topBright">@color/colorAccent</item>
+        <item name="android:topDark">@color/colorAccent</item>
+    </style>
 
 </resources>
